2007-02-09  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/dateentry.py (_DateEntryPopup.popup): Filter out ValueUnset.

2007-02-08  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/objectlist.py (ObjectList._treeview_search_equal_func): 
	Make it case-insensitive by default.

2007-02-07  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/icon.py (IconEntry._recompute): Use alternative
	methods to trigger a recompute(), fixes ComboEntry issue since
	::change was emitted when it shouldn't be needed.

2007-02-06  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/widgets/entry.py (ProxyEntry.read): 
	* tests/test_Entry.py (EntryTest.testRead): 
	Return ValueUnset when the entry is empty instead
	of an empty string.

2007-02-04  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi.spec (Requires): 
	* Makefile: 
	* MANIFEST.in: 
	Add rpm spec file.

=== 1.9.13 ===
2007-02-01  Johan Dahlin  <jdahlin@async.com.br>

	* NEWS:
	* debian/changelog:
	* doc/howto.tex:
	* kiwi/__version__.py:

	Release 1.9.13
	
2007-02-01  Johan Dahlin  <jdahlin@async.com.br>

	* setup.py (pkgs): Use pkg-config instead of importing gtk
	which requires a display.

	* MANIFEST.in: Always include _kiwi.c

2007-01-31  Ronaldo Maia <romaia@async.com.br>

	reviewed by: Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/icon.py: Fix workaround for recompute and call it after
	showing an icon on a widget.

=== 1.9.12 ===
2007-01-29  Johan Dahlin  <jdahlin@async.com.br>

	* Makefile:
	* NEWS:
	* debian/changelog:
	* doc/howto.tex:
	* doc/release-checklist.txt:
	* kiwi/__version__.py:
	* po/fr.po:
	* po/kiwi.pot:
	* po/pt_BR.po:
	* po/sv.po:

	1.9.12

2007-01-19  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/comboentry.py (_ComboEntryPopup.set_selected_iter): 
	Try setting the full model if everything else fails.
	Based on patch by Goedson Teixeira Paixao

	Fixes #3099.

2006-11-11  Marco Antonio Porcho Souza  <maporcho@gmail.com>

	reviewed by: Johan Dahlin  <jdahlin@async.com.br>
