@@ -1,3 +1,9 @@
+2007-02-14  Johan Dahlin  <jdahlin@async.com.br>
+
+	* kiwi/component.py: Make providedBy check in subclasses, makes
+	it possible to use personalinformation.py without 
+	depending on zope.interface.
+
 2007-02-09  Johan Dahlin  <jdahlin@async.com.br>
 
 	* kiwi/ui/dateentry.py (_DateEntryPopup.popup): Filter out ValueUnset.
